# ml-op-benchmarks

./: .gitattributes  CMakeLists.txt  Makefile  README.md  fizz.cc  make_cc_native.sh  make_npbench.sh  make_tfbench.sh  make_torch_native.sh  make_torchbench.sh  np_fizz.py  onnx_fizz.py  tf_cross.py  tf_env.txt  tf_fizz.py  tf_fizz_saved_model.py  torch_fizz.cc  torch_fizz.py  torch_fizz_vec.py
cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  torch_fizz
libtorch/: build-hash
libtorch/include/ATen/: Functions.h  NativeFunctions.h
libtorch/lib/: libc10.dylib  libcaffe2_detectron_ops.dylib  libcaffe2_module_test_dynamic.dylib  libcaffe2_observers.dylib  libiomp5.dylib  libshm.dylib  libtorch.dylib  libtorch_python.dylib
libtorch/share/cmake/Caffe2/: Caffe2Targets-release.cmake  Caffe2Targets.cmake
libtorch/share/cmake/Torch/: TorchConfig.cmake
